--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sambatur Travel</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="travel_recommendation.js"></script>
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo"><img src="assets/logo.png" alt="logo"><span id="span-logo">Sambatur</span></div>
+            <div class="menu">
+                <a href="travel_recommendation.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact Us</a>
+            </div>
+            <div class="search-box">
+                <input type="text" placeholder="Enter a destination or keyword">
+                <img src="assets/search.png" alt="search">
+                <button id="search-btn">Search</button>
+                <button id="clear-btn">Clear</button>
+            </div>
+        </nav>
+    </header>
+    <section>
+        <p class="title-big">Discover the World with Sambatur!</p>
+        <p class="section-normal"> We turn your travel dreams into reality. With years of experience and a dedicated team, we offer 
+            customized packages to amazing destinations around the world. Whether it's a romantic getaway, a family 
+            adventure, or a business trip, we take care of all the details so you can relax and enjoy every moment.</p>
+        <p class="section-normal"><strong>Experience and Reliability:</strong> Years of experience in the market with satisfied customers.</p>
+        <p class="section-normal"><strong>Personalized Service:</strong> Focus on offering the best experience for each customer.</p>
+        <p class="section-normal"><strong>Variety of Destinations:</strong> Options for all tastes and budgets.</p>
+    </section>
+    <img id="img-windows" src="assets/window.jpg" alt="window">
+    <footer>
+        <div>
+            <a href="http://www.facebook.com" target="_blank"><img src="assets/facebook.png" alt="facebook"></a>
+            <a href="http://www.instagram.com" target="_blank"><img src="assets/instagram.png" alt="instagram"></a>
+            <a href="http://www.x.com" target="_blank"><img src="assets/twitter.png" alt="twitter"></a>
+            <a href="http://www.youtube.com" target="_blank"><img src="assets/youtube.png" alt="youtube"></a>
+        </div>
+        </footer>
 
+</body>
+</html>
