--- a/about.html
+++ b/about.html
@@ -18,7 +18,27 @@
             </div>
         </nav>
     </header>
-    <h1>About</h1>
+    <section>
+        <p class="title-big">About us</p>
+        <p class="section-normal">Well come to our company!, we are a tourism agency dedicated to transforming your trips into unforgettable experiences. 
+            With years of expertise in the market, we offer personalized packages for national and international destinations, 
+            catering to both leisure and business trips. Our team of experts is ready to plan every detail of your journey, 
+            ensuring comfort, safety and unique moments. Explore the world with us and discover new horizons. Travel with those 
+            who understand adventure and make your next trip a story to tell!</p>
+    </section>
+    <section class="our-team">
+        <p class="title-big">Our team</p>
+        <div>
+        <img src="assets/luis.png" alt="luis">
+        <img src="assets/allan.png" alt="allan">
+        <img src="assets/patricia.png" alt="patricia">
+        <span id="id-01">Luis (CEO)</span>
+        <span id="id-02">Allan (Team Lead)</span>
+        <span id="id-03">Ana (Delivery Head)</span>
+        </div>
+        
+    </section>
+    
     <footer>
         <div>
             <a href="http://www.facebook.com" target="_blank"><img src="assets/facebook.png" alt="facebook"></a>
