--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,18 @@
             </div>
         </nav>
     </header>
-    <h1>Contact</h1>
+    <section>
+        <p class="title-big">Contact us</p>
+        <form action="#home">
+            <label for="name">Name</label><br>
+            <input type="text" id="name" name="name"><br>
+            <label for="email">E-mail</label><br>
+            <input type="email" id="email" name="email"><br>
+            <label for="msg">Message</label><br>
+            <textarea name="msg" id="msg"></textarea>
+            <button class="btn-normal" type="submit">Submit</button>
+        </form>
+    </section>
     <footer>
         <div>
             <a href="http://www.facebook.com" target="_blank"><img src="assets/facebook.png" alt="facebook"></a>
