--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -17,10 +17,10 @@
                 <a href="contact.html">Contact Us</a>
             </div>
             <div class="search-box">
-                <input type="text" placeholder="Enter a destination or keyword">
+                <input type="text" id="input-search" placeholder="Enter a destination or keyword">
                 <img src="assets/search.png" alt="search">
-                <button id="search-btn">Search</button>
-                <button id="clear-btn">Clear</button>
+                <button id="search-btn" onclick="searchJSON()">Search</button>
+                <button id="clear-btn" onclick="clearSearch()">Clear</button>
             </div>
         </nav>
     </header>
@@ -33,7 +33,8 @@
         <p class="section-normal"><strong>Personalized Service:</strong> Focus on offering the best experience for each customer.</p>
         <p class="section-normal"><strong>Variety of Destinations:</strong> Options for all tastes and budgets.</p>
     </section>
-    <img id="img-windows" src="assets/window.jpg" alt="window">
+    <div id="div-result"></div>
+    <button class="btn-normal" onclick="book()">BOOK NOW</button>
     <footer>
         <div>
             <a href="http://www.facebook.com" target="_blank"><img src="assets/facebook.png" alt="facebook"></a>
@@ -42,6 +43,6 @@
             <a href="http://www.youtube.com" target="_blank"><img src="assets/youtube.png" alt="youtube"></a>
         </div>
         </footer>
-
+ 
 </body>
 </html>
