--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo"><img src="assets/logo.png" alt="logo"><span id="span-logo">Sambatur</span></div>
             <div class="menu">
-                <a href="travel_recommendation.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="contact.html">Contact Us</a>
             </div>
